2011-02-08  Michael Wiegand <michael.wiegand@greenbone.net>

	Consolidation: Move most of configuration and installation handling to
	top level CMakeLists.txt and clean up top level CMakeLists.txt.

	* CMakeLists.txt: Split up package detection. Set all _CFLAGS
	and _LDFLAGS properly. Add all defines to CMAKE_C_FLAGS. Handle
	installation of logging configuration and support files.

	* src/CMakeLists.txt: Remove most configuration and installation. Use
	the LINK_FLAGS reported by pkg-config instead of hard coding them.
	Split up handling of _LIBRARIES, added TODOs.

	* doc/CMakeLists.txt: Improved handling of "make clean" stage.

2011-02-08  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (get_config_omp): Always get the NVT families.

	* src/html/omp.xsl (config [families]): Show the total number of NVTs too,
	counting from NVT families list.

2011-02-07  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/CMakeLists.txt: Removed some testing stuff that
	accidently was comitted.

2011-02-05  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/gsad.c (gsad_init, main): Replace GSA_STATE_DIR by GSA_DATA_DIR.

	* src/CMakeLists.txt: Replace GSA_STATE_DIR by GSA_DATA_DIR.

	* CMakeLists.txt: Replace GSA_STATE_DIR by GSA_DATA_DIR.

2011-02-05  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/help.xsl (save_note_omp): Remove premature openvas_server_close.

2011-02-04  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/help.xsl (scanconfig_details.html): Replace name in get_config
	URL with ID.

2011-02-04  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Updated version number.

	* src/html/help.xsl: Updated version number.

2011-02-04  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the gsa 2.0+rc3 release.

	* CHANGES: Updated.

2011-02-04  Michael Wiegand <michael.wiegand@greenbone.net>

	* README: Fix typo, strip now redundant part from example.
